# repwatcher

./: .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Makefile  README.rst  dev-requirements.txt  pyproject.toml  requirements.txt  tasks.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: release-please.yml
docs/: conf.py  make.bat
src/repwatcher/: __init__.py  __main__.py  cli.py  config.py  db.py  gui.py  models.py  replay.py  repwatcher.py  watcher.py  webclient.py
tests/: test_repwatcher.py
