[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "repwatcher"
version = "0.1.0"
description = "Tool to automatically upload SC:BW replays to RepMastered.com"
readme = "README.rst"
authors = [{ name = "Thomas McManus", email = "mcmanustfj@gmail.com" }]
maintainers = [{ name = "Thomas McManus", email = "mcmanustfj@gmail.com" }]
classifiers = []
license = { text = "MIT license" }
requires-python = ">=3.8"
keywords = ["starcraft", "replays", "repmastered"]
dependencies = []

[project.optional-dependencies]
dev = [
  "coverage", # testing
  "mypy",     # linting
  "pytest",   # testing
  "ruff",     # linting
]

[project.urls]

bugs = "https://github.com/mcmanustfj/repwatcher/issues"
changelog = "https://github.com/mcmanustfj/repwatcher/blob/master/changelog.md"
homepage = "https://github.com/mcmanustfj/repwatcher"

[project.scripts]
repwatcher = "repwatcher.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.ruff]
include = ["src"]


[tool.pyrighnt]
include = ["src"]

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true


[tool.bumpversion]
current_version = "0.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = false
message = "Bump version: {current_version} → {new_version}"
commit_args = ""
